- bringIssusList API 호출 로직 추가
 - Manifest Internet Permission 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tistory.jeongs0222.thingsflow">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".ThingsFlowApp"
         android:allowBackup="true"
